# libsignal-rust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
protos/: WhisperTextProtocol.proto
src/: base_key_type.rs  chain_type.rs  crypto.rs  curve.rs  errors.rs  keyhelper.rs  lib.rs  numeric_fingerprint.rs  protocol_address.rs  queue_job.rs  session_builder.rs  session_cipher.rs  session_record.rs  util.rs
tests/: crypto_tests.rs  curve_tests.rs  protobuf_tests.rs  session_tests.rs
