[package]
name = "libsignal-rust"
version = "0.1.0"
edition = "2021"
description = "Complete and Powerful Rust implementation of libsignal protocol"
license = "GPL-3.0"
authors = ["libsignal-rust"]

[dependencies]
curve25519-dalek = { version = "4.1", features = ["rand_core", "digest"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
base64 = "0.22"
rand = "0.8"
rand_core = "0.6"
subtle = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
chrono = "0.4.42"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
hex = "0.4"
tokio-test = "0.4"
async-trait = "0.1"
